atualização dos bugs e desafio do teatro - semana passada inclusa

--- a/index.htm
+++ b/index.htm
@@ -15,8 +15,9 @@
     <script src="./js/jquery-ui.js"></script>
     <script src="./js/navegacao.js"></script>
     <script src="./js/teatro.js"></script>
+    <script src="./js/carro.js"></script>
 
-    <title>Combinatória no Parque</title>
+    <title>Combinatoria no Parque</title>
 </head>
 
 <body>
