--- a/parque.htm
+++ b/parque.htm
@@ -5,7 +5,11 @@
 
   <img id="fechar_feedback" class="txt_btn" title="Fechar" src="img/fechar_feedback.png"/>
 
-  <img id="teatro" class="btn" title="Teatro" style="position: absolute; left: 360px; top: 350px; width: 200px; height: 150px" src="img/transparent.png"/>
+  <img id="teatro" class="btn" title="Teatro" style="position: absolute; left: 405px; top: 370px; width: 120px; height: 100px" src="img/transparent.png"/>
+
+  <img id="rodagigante" class="btn" title="Roda Gigante" style="position: absolute; left: 270px; top: 400px; width: 120px; height: 140px" src="img/transparent.png"/>
+
+  <img id="carro" class="btn" title="Carro" style="position: absolute; left: 655px; top: 200px; width: 275px; height: 150px" src="img/transparent.png"/>
   
   <img id="voltar" class="btn" title="Voltar" src="img/voltar.png"/>
   <img id="ajuda" class="btn" title="Ajuda" src="img/ajuda.png"/>
