--- a/teatro0.htm
+++ b/teatro0.htm
@@ -1,10 +1,10 @@
 <div id="background" style="background-image:url('img/teatro/bgprincipal.png')"/>
-  <img id="rita" class="professora" src="img/teatro/rita.png" style="left:35%; top:40%"/>
-  <img id="menino1" class="aluno" src="img/teatro/menino1.png" style="left:28%; top:50%; cursor:auto"/>
-  <img id="menino2" class="aluno" src="img/teatro/menino2.png" style="left:20%; top:53%; cursor:auto"/>
-  <img id="menina1" class="aluno" src="img/teatro/menina1.png" style="left:8%; top:52%; cursor:auto"/>
-  <img id="menina2" class="aluno" src="img/teatro/menina2.png" style="left:14%; top:56%; cursor:auto"/>
-  <img id="menina3" class="aluno" src="img/teatro/menina3.png" style="left:30%; top:59%; cursor:auto"/>
+  <img id="rita" class="professora" src="img/rita.png" style="left:35%; top:40%"/>
+  <img id="menino1" class="aluno" src="img/menino1.png" style="left:28%; top:50%; cursor:auto"/>
+  <img id="menino2" class="aluno" src="img/menino2.png" style="left:20%; top:53%; cursor:auto"/>
+  <img id="menina1" class="aluno" src="img/menina1.png" style="left:8%; top:52%; cursor:auto"/>
+  <img id="menina2" class="aluno" src="img/menina2.png" style="left:14%; top:56%; cursor:auto"/>
+  <img id="menina3" class="aluno" src="img/menina3.png" style="left:30%; top:59%; cursor:auto"/>
   
   <img id="jose" class="guia" src="img/jose.png"/>
 
