--- a/teatro1.htm
+++ b/teatro1.htm
@@ -21,12 +21,12 @@
   <div id="caixa2" class="caixa" style="left:63%; top:50%"></div>
   <div id="caixa3" class="caixa" style="left:76%; top:50%"></div>
   
-  <img id="rita" class="professora" src="img/teatro/rita.png" style="left:35%; top:40%"/>
-  <img id="menino1" class="aluno" src="img/teatro/menino1.png" style="left:28%; top:50%; cursor:auto"/>
-  <img id="menino2" class="aluno" src="img/teatro/menino2.png" style="left:20%; top:53%; cursor:auto"/>
-  <img id="menina1" class="aluno" src="img/teatro/menina1.png" style="left:8%; top:52%; cursor:auto"/>
-  <img id="menina2" class="aluno" src="img/teatro/menina2.png" style="left:14%; top:56%; cursor:auto"/>
-  <img id="menina3" class="aluno" src="img/teatro/menina3.png" style="left:30%; top:59%; cursor:auto"/>
+  <img id="rita" class="professora" src="img/rita.png" style="left:35%; top:40%"/>
+  <img id="menino1" class="aluno" src="img/menino1.png" style="left:28%; top:50%; cursor:auto"/>
+  <img id="menino2" class="aluno" src="img/menino2.png" style="left:20%; top:53%; cursor:auto"/>
+  <img id="menina1" class="aluno" src="img/menina1.png" style="left:8%; top:52%; cursor:auto"/>
+  <img id="menina2" class="aluno" src="img/menina2.png" style="left:14%; top:56%; cursor:auto"/>
+  <img id="menina3" class="aluno" src="img/menina3.png" style="left:30%; top:59%; cursor:auto"/>
   
   <div id="feedback0" class="feedback">
     Para começar a atividade, clique em cima de cada criança e arraste-a até o local indicado no centro do palco.
