--- a/teatro4.htm
+++ b/teatro4.htm
@@ -18,21 +18,21 @@
     <img id="comb8" class="combinacao" src="img/teatro/o1o2a3.png" style="display: inline"/>
   </div>
 
-  <div id="texto1" class="texto" style="top: 40%; left: 3%">
-    <b>Desafio 1</b>: Quantos são os possíveis grupos formados por um menino e duas meninas?
+  <div id="texto2" class="texto" style="top: 40%; left: 3%">
+    <b>Desafio 2</b>: Quantos são os possíveis grupos formados por dois meninos e uma menina?
   </div>
 
-  <div id="desafioteatro1" style="position: absolute; top: 330px; left: 350px; height: 500px">
+  <div id="desafioteatro2" style="position: absolute; top: 330px; left: 350px; height: 500px">
     <form>
       <input type="text" name="resposta">
-      <input type="image" title="Responder" src="img/avancar_texto.png" style="position:relative; top:11px" onClick="desafioteatro1(this.form); return false;">
+      <input type="image" title="Responder" src="img/avancar_texto.png" style="position:relative; top:11px" onClick="desafioteatro2(this.form); return false;">
     </form>
   </div>
-  
+
   <div id="feedback2" class="feedback">
     Essa resposta esta errada, tente denovo.
   </div>
-
+  
   <img id="voltar" class="btn" title="Voltar" src="img/voltar.png"/>
   <img id="ajuda" class="btn" title="Ajuda" src="img/ajuda.png"/>
   <img id="inicio" class="btn" title="Início" src="img/inicio.png"/>
