Atualização e finalização to projeto

--- a/carro0.htm
+++ b/carro0.htm
@@ -1,15 +1,16 @@
 <div id="background" style="background-image:url('img/carro/bgprincipal.png')"/>
 
-<img id="menino1" class="aluno" src="img/menino1.png" style="left:10%; top:60%; cursor:auto"/>
-<img id="menina1" class="aluno" src="img/menina1.png" style="left:2%; top:60%; cursor:auto"/>
-<img id="menina2" class="aluno" src="img/menina2.png" style="left:19%; top:60%; cursor:auto"/>
+<img id="cmenino1" class="aluno" src="img/carro/carro_chaveazul_menino1.png" style="left:10%; top:52%; cursor:auto"/>
+<img id="cmenina1" class="aluno" src="img/carro/carro_chavevermelha_menina1.png" style="left:2%; top:52%; cursor:auto"/>
+<img id="cmenina2" class="aluno" src="img/carro/carro_chaveverde_menina2.png" style="left:19%; top:52%; cursor:auto"/>
 
 
-<img id="jose" class="guia" src="img/jose.png"/>
+<img id="jose" class="guia2" src="img/jose.png"/>
 
   <div id="balao">
-    Ajude as crianças a descobrir de quantas formas eles podem entrar no brinquedo, dado que a chave de cada um só liga os carrinhos de cor diferente da sua chave.<br>
-    <img id="comecar" class="txt_btn" title="Começar" src="img/avancar_texto.png"/>
+  	<font size="2,9">
+    Cada criança recebeu uma chave da professora. Cada chave tem uma cor diferente e liga qualquer carrinho de cor diferente da sua. Por exemplo, a chave verde liga os carrinhos azul e vermelho. De quantas maneiras as crianças poderão fazer todos os carrinhos funcionarem? 
+    <img id="comecar" class="txt_btn" title="Começar" style="position: absolute; top: 65%" src="img/avancar_texto.png"/>
   </div>
   
   <div id="feedback0" class="feedback">
