--- a/carro1.htm
+++ b/carro1.htm
@@ -1,26 +1,51 @@
 <div id="background" style="background-image:url('img/carro/bgprincipal.png')"/>
-  <div id="caixa1" class="caixa" style="left:47%; top:60%"></div>
-  <div id="caixa2" class="caixa" style="left:64%; top:60%"></div>
-  <div id="caixa3" class="caixa" style="left:81%; top:60%"></div>
 
-  <img id="chaveazul" class="chave" src="img/carro/chaveazul.png" style="left:10%; top:52%; cursor:auto"/>
-  <img id="chavevemelha" class="chave" src="img/carro/chavevermelha.png" style="left:2%; top:52%; cursor:auto"/>
-  <img id="chaveverde" class="chave" src="img/carro/chaveverde.png" style="left:19%; top:52%; cursor:auto"/>
+  <div id="combinacoes01">
+    <img id="comb0" class="combinacao" src="img/carro/a2o1a1.png"/><br/>
+    <img id="comb1" class="combinacao" src="img/carro/o1a1a2.png"/><br/>
+  </div>
 
-  <img id="menino1" class="aluno" src="img/menino1.png" style="left:10%; top:60%; cursor:auto"/>
-  <img id="menina1" class="aluno" src="img/menina1.png" style="left:2%; top:60%; cursor:auto"/>
-  <img id="menina2" class="aluno" src="img/menina2.png" style="left:19%; top:60%; cursor:auto"/>
+
+  <div id="caixa_carro1" class="caixa_carro" style="left:47%; top:52%"></div>
+  <div id="caixa_carro2" class="caixa_carro" style="left:64%; top:52%"></div>
+  <div id="caixa_carro3" class="caixa_carro" style="left:81%; top:52%"></div>
+
+
+  <img id="cmenino1" class="aluno" src="img/carro/carro_chaveazul_menino1.png" style="left:10%; top:52%; cursor:auto"/>
+  <img id="cmenina1" class="aluno" src="img/carro/carro_chavevermelha_menina1.png" style="left:2%; top:52%; cursor:auto"/>
+  <img id="cmenina2" class="aluno" src="img/carro/carro_chaveverde_menina2.png" style="left:19%; top:52%; cursor:auto"/>
 
   
   <div id="feedback0" class="feedback">
     As crianças devem entrar nos carrinhos de cor diferente de suas chaves. Quantas possibilidades existem para que isso aconteça?
   </div>
   
+  <div id="feedback1" class="feedback">
+    Lembre-se que a cor da chave do aluno deve ser diferente da cor do seu carrinho!
+  </div>
+  
+  <div id="feedback2" class="feedback">
+    Grupo repetido! Note que esse grupo j&aacute; foi formado.
+  </div>
+
+  <div id="feedback3" class="feedback">
+    Parab&eacute;ns, você encontrou todas as possibilidades!
+  </div>
+
+  <div id="feedback4" class="feedback">
+    Parab&eacute;ns, esse &eacute; um poss&iacute;vel grupo! Mas existem mais possibilidades.
+  </div>
+
+  <div id="feedback5" class="feedback">
+    <font size="2,9">
+    Cada criança recebeu uma chave da professora. Cada chave tem uma cor diferente e liga qualquer carrinho de cor diferente da sua. Por exemplo, a chave verde liga os carrinhos azul e vermelho. De quantas maneiras as crian&ccedil;as poder&atilde;o fazer todos os carrinhos funcionarem? 
+  </div>
+
   <img id="fechar_feedback" class="txt_btn" title="Fechar" src="img/fechar_feedback.png"/>
 
   <img id="voltar" class="btn" title="Voltar" src="img/voltar.png"/>
   <img id="ajuda" class="btn" title="Ajuda" src="img/ajuda.png"/>
   <img id="inicio" class="btn" title="Início" src="img/inicio.png"/>
-  <img id="avancar" class="btn" title="Pular" src="img/avancar.png"/>
+  <img id="pergunta" class="btn" title="Pergunta" src="img/pergunta.png">
 
 </div>  
