--- a/carro2.htm
+++ b/carro2.htm
@@ -1,9 +1,10 @@
 <div id="background" style="background-image:url('img/carro/bgprincipal.png')"/>
   
-  <img id="jose" class="guia" src="img/jose.png"/>
+  <img id="jose" class="guia2" src="img/jose.png"/>
   <div id="balao">
-    Agora que você já entendeu um pouco, vamos tentar um mais difícil!<br>
-    <img id="seguir" class="txt_btn" title="Seguir" src="img/avancar_texto.png"/>
+  	<font size="2,5">
+    Agora que você já conseguiu resolver o problema anterior, vamos tentar um mais difícil​, com 4 chaves e 4 carrinhos. Lembrando que as crianças devem entrar nos carrinhos de cor diferente de suas chaves. Quantas possibilidades existem para que isso aconteça?
+    <img id="seguir" class="txt_btn" title="Seguir" src="img/avancar_texto.png" style=" top:60%"/>
   </div>
   
   <img id="voltar" class="btn" title="Voltar" src="img/voltar.png"/>
