--- a/carro5.htm
+++ b/carro5.htm
@@ -1,8 +1,10 @@
   
-<div id="background" style="background-image:url('img/carro/bgprincipal.png')"/>
+<div id="background" style="background-image:url('img/carro/bgprincipal5.png')"/>
 
   <div id="texto1" class="texto" style="top: 30%; left: 3%">
-    <b>Desafio 1</b>: Quantas seriam as combinações se fossem 5 crianças e 5 carrinhos?
+    <font size="4">
+    <b>Desafio</b>: Agora estão disponíveis 5 chaves de cores diferentes e 5 carrinhos com as mesmas cores das chaves.​ Como antes, cada chave liga qualquer carrinho de cor diferente da sua. De quantas maneiras ​5 crianças​
+    poderão fazer todos os carrinhos funcionarem?
   </div>
 
   <div id="desafiocarro1" style="position: absolute; top: 300px; left: 350px; height: 500px">
