--- a/home.htm
+++ b/home.htm
@@ -1,7 +1,9 @@
 <div id="background" style="background-image:url('img/bgprincipal.png')"/>
   <div id="balao" style="top:20%; right:28%">
-  Olá, sou o monitor José responsável pelas atrações do parque.
-  Estou aqui para ajudar a professora Rita e seus alunos a se divertirem nos brinquedos.
+    <font size="4">
+    Olá, sou o monitor José responsável pelas atrações do parque.
+    Estou aqui para ajudar a professora Rita e seus alunos a se divertirem nos brinquedos.
+    </font>  
   </div>
   <img id="jose" class="guia" src="img/jose.png"/>
 
