--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,7 @@
     <script src="./js/navegacao.js"></script>
     <script src="./js/teatro.js"></script>
     <script src="./js/carro.js"></script>
+    <script src="./js/roda.js"></script>
 
     <title>Combinatoria no Parque</title>
 </head>
