--- a/parque.htm
+++ b/parque.htm
@@ -1,6 +1,8 @@
 <div id="background" style="background-image:url('img/bgprincipal.png')"/>
   <div id="feedback0" class="feedback">
-    Para iniciar o passeio clique nos brinquedos.
+    <font size="4">
+    <br>
+    Para iniciar, clique em uma das atrações do parque.
   </div>
 
   <img id="fechar_feedback" class="txt_btn" title="Fechar" src="img/fechar_feedback.png"/>
