--- a/roda0.htm
+++ b/roda0.htm
@@ -1,15 +1,20 @@
 <div id="background" style="background-image:url('img/roda/bgprincipal.png')"/>
 
-
+<img id="rmenino1" class="aluno" src="img/roda/menino1.png" style="left:88%; top:55%; cursor:auto"/>
+  <img id="rmenina2" class="aluno" src="img/roda/menina2.png" style="left:79%; top:53%; cursor:auto"/>
+  <img id="rmenina1" class="aluno" src="img/roda/menina1.png" style="left:84%; top:64%; cursor:auto"/>
+  <img id="rmenina3" class="aluno" src="img/roda/menina3.png" style="left:74%; top:63%; cursor:auto"/>
+  
 <img id="jose" class="guia" src="img/jose.png"/>
 
   <div id="balao">
-    Ajude a professora Rita a organizar as crianças nas cabines da roda gigante. Mas fique esperto, a professora também vai! E ela não quer nenhuma criança nas cabines ao lado dela.<br>
-    <img id="comecar" class="txt_btn" title="Começar" src="img/avancar_texto.png"/>
+    Ajude a professora Rita a organizar as crianças nas cabines da roda gigante. Mas fique esperto, as crianças só podem sentar nas cabines escuras.
+
+    <img id="comecar" class="txt_btn" title="Começar" style="position: absolute; top: 60%" src="img/avancar_texto.png"/>
   </div>
   
   <div id="feedback0" class="feedback">
-    Monte todas as possibilidades possíveis em que as crianças não fiquem nas cabines proximas a professora.
+    Monte todas as possibilidades em que as crianças fiquem apenas nas cabines escuras.
   </div>
   
   <img id="fechar_feedback" class="txt_btn" title="Fechar" src="img/fechar_feedback.png"/>
