--- a/roda1.htm
+++ b/roda1.htm
@@ -1,31 +1,84 @@
 <div id="background" style="background-image:url('img/roda/bgprincipal.png')"/>
+  <div id="combinacoes4">
+    <img id="comb0" class="combinacao" src="img/roda/o1a1a2a3.png"/><br/>
+    <img id="comb1" class="combinacao" src="img/roda/o1a1a3a2.png"/><br/>
+    <img id="comb2" class="combinacao" src="img/roda/o1a2a1a3.png"/><br/>
+    <img id="comb3" class="combinacao" src="img/roda/o1a2a3a1.png"/><br/>
+    <img id="comb4" class="combinacao" src="img/roda/o1a3a2a1.png"/><br/>
+    <img id="comb5" class="combinacao" src="img/roda/o1a3a1a2.png"/><br/>
+    <img id="comb6" class="combinacao" src="img/roda/a1o1a2a3.png"/><br/>
+    <img id="comb7" class="combinacao" src="img/roda/a1o1a3a2.png"/><br/>
+    <img id="comb8" class="combinacao" src="img/roda/a1a2o1a3.png"/><br/>
+    <img id="comb9" class="combinacao" src="img/roda/a1a2a3o1.png"/><br/>
+    <img id="comb10" class="combinacao" src="img/roda/a1a3a2o1.png"/><br/>
+    <img id="comb11" class="combinacao" src="img/roda/a1a3o1a2.png"/><br/>
+  </div>
 
+  <div id="combinacoes3">
+    <img id="comb12" class="combinacao" src="img/roda/a2o1a1a3.png"/><br/>
+    <img id="comb13" class="combinacao" src="img/roda/a2o1a3a1.png"/><br/>
+    <img id="comb14" class="combinacao" src="img/roda/a2a3a1o1.png"/><br/>
+    <img id="comb15" class="combinacao" src="img/roda/a2a3o1a1.png"/><br/>
+    <img id="comb16" class="combinacao" src="img/roda/a2a1o1a3.png"/><br/>
+    <img id="comb17" class="combinacao" src="img/roda/a2a1a3o1.png"/><br/>
+    <img id="comb18" class="combinacao" src="img/roda/a3o1a2a1.png"/><br/>
+    <img id="comb19" class="combinacao" src="img/roda/a3o1a1a2.png"/><br/>
+    <img id="comb20" class="combinacao" src="img/roda/a3a1o1a2.png"/><br/>
+    <img id="comb21" class="combinacao" src="img/roda/a3a1a2o1.png"/><br/>
+    <img id="comb22" class="combinacao" src="img/roda/a3a2o1a1.png"/><br/>
+    <img id="comb23" class="combinacao" src="img/roda/a3a2a1o1.png"/><br/>
+  </div> 
 
-  <div id="caixa1" class="caixa" style="left:23%; top:5%"></div>
-  <div id="caixa2" class="caixa" style="left:23%; top:55%"></div>
-  <div id="caixa3" class="caixa" style="left:9%; top:53%"></div>
-  <div id="caixa4" class="caixa" style="left:9%; top:5%"></div>
-  <div id="caixa5" class="caixa" style="left:2%; top:29%"></div>
-  <div id="caixa6" class="caixa" style="left:36%; top:53%"></div>
-  <div id="caixa7" class="caixa" style="left:36%; top:5%"></div>
-  <div id="caixa8" class="caixa" style="left:43%; top:29%"></div>
+  <div id="caixa_roda1" class="caixa" style="left:23%; top:5%"></div>
+  <div id="caixa_roda3" class="caixa" style="left:23%; top:55%"></div>
+  <div id="caixa_roda7" class="caixa" style="left:9%; top:53%"></div>
+  <div id="caixa_roda8" class="caixa" style="left:9%; top:5%"></div>
+  <div id="caixa_roda4" class="caixa" style="left:2%; top:29%"></div>
+  <div id="caixa_roda6" class="caixa" style="left:36%; top:53%"></div>
+  <div id="caixa_roda5" class="caixa" style="left:36%; top:5%"></div>
+  <div id="caixa_roda2" class="caixa" style="left:43%; top:29%"></div>
 
   
-  <img id="professora" class="aluno" src="img/rita.png" style="left:64%; top:40%; cursor:auto"/>
-  <img id="menino1" class="aluno" src="img/menino1.png" style="left:88%; top:55%; cursor:auto"/>
-  <img id="menino2" class="aluno" src="img/menino2.png" style="left:70%; top:55%; cursor:auto"/>
-  <img id="menina2" class="aluno" src="img/menina2.png" style="left:79%; top:53%; cursor:auto"/>
-  <img id="menina1" class="aluno" src="img/menina1.png" style="left:84%; top:64%; cursor:auto"/>
-  <img id="menina3" class="aluno" src="img/menina3.png" style="left:74%; top:63%; cursor:auto"/>
+  <img id="rmenino1" class="aluno" src="img/roda/menino1.png" style="left:88%; top:55%; cursor:auto"/>
+  <img id="rmenina2" class="aluno" src="img/roda/menina2.png" style="left:79%; top:53%; cursor:auto"/>
+  <img id="rmenina1" class="aluno" src="img/roda/menina1.png" style="left:84%; top:64%; cursor:auto"/>
+  <img id="rmenina3" class="aluno" src="img/roda/menina3.png" style="left:74%; top:63%; cursor:auto"/>
   
 
   <div id="feedback0" class="feedback">
-    Monte todas as possibilidades possíveis em que as crianças não fiquem nas cabines proximas a professora.
+    Monte todas as possibilidades em que as crianças fiquem apenas nas cabines escuras.
+  </div>
+
+  <div id="feedback1" class="feedback">
+    Lembre-se que a cor da chave do aluno deve ser diferente da cor do seu carrinho!
   </div>
   
+  <div id="feedback2" class="feedback">
+    Grupo repetido! Note que esse grupo j&aacute; foi formado.
+  </div>
+
+  <div id="feedback3" class="feedback">
+    Parab&eacute;ns, você encontrou todas as possibilidades!
+  </div>
+
+  <div id="feedback4" class="feedback">
+    Parab&eacute;ns, esse &eacute; um poss&iacute;vel grupo! Mas existem mais possibilidades.
+  </div>
+
+  <div id="feedback5" class="feedback">
+    <font size="3">
+     Ajude a professora Rita a organizar as crianças nas cabines da roda gigante. Mas fique esperto, as crianças só podem sentar nas cabines escuras.
+  </div>
+
+  <div id="feedback6" class="feedback">
+    Preste atenção! Você só pode usar as cabines escuras!
+  </div>
+
   <img id="fechar_feedback" class="txt_btn" title="Fechar" src="img/fechar_feedback.png"/>
 
   <img id="voltar" class="btn" title="Voltar" src="img/voltar.png"/>
   <img id="ajuda" class="btn" title="Ajuda" src="img/ajuda.png"/>
   <img id="inicio" class="btn" title="Início" src="img/inicio.png"/>
+  <img id="pergunta" class="btn" title="Pergunta" src="img/pergunta.png">
+  
 </div>  
