--- a/roda2.htm
+++ b/roda2.htm
@@ -1,9 +1,12 @@
-<div id="background" style="background-image:url('img/carro/bgprincipal.png')"/>
-  <img id="jose" class="guia2" src="img/jose.png"/>
+<div id="background" style="background-image:url('img/roda/bgprincipal.png')"/>
+
+
+<img id="jose" class="guia" src="img/jose.png"/>
 
   <div id="balao">
-    Que tal continuarmos o passeio por outro brinquedo?
-    <img id="seguir" class="txt_btn" title="Seguir" src="img/avancar_texto.png"/>
+    Agora responda os desafios.
+
+    <img id="comecar" class="txt_btn" title="Começar" style="position: absolute; top: 60%" src="img/avancar_texto.png"/>
   </div>
   
   <img id="fechar_feedback" class="txt_btn" title="Fechar" src="img/fechar_feedback.png"/>
@@ -11,4 +14,5 @@
   <img id="voltar" class="btn" title="Voltar" src="img/voltar.png"/>
   <img id="ajuda" class="btn" title="Ajuda" src="img/ajuda.png"/>
   <img id="inicio" class="btn" title="Início" src="img/inicio.png"/>
+
 </div>
