--- a/teatro3.htm
+++ b/teatro3.htm
@@ -19,7 +19,7 @@
   </div>
 
   <div id="texto1" class="texto" style="top: 40%; left: 3%">
-    <b>Desafio 1</b>: Quantos são os possíveis grupos formados por um menino e duas meninas?
+    <b>Responda</b>: Quantos são os possíveis grupos formados por um menino e duas meninas?
   </div>
 
   <div id="desafioteatro1" style="position: absolute; top: 330px; left: 350px; height: 500px">
