--- a/teatro4.htm
+++ b/teatro4.htm
@@ -19,7 +19,7 @@
   </div>
 
   <div id="texto2" class="texto" style="top: 40%; left: 3%">
-    <b>Desafio 2</b>: Quantos são os possíveis grupos formados por dois meninos e uma menina?
+    <b>Responda</b>: Quantos são os possíveis grupos formados por dois meninos e uma menina?
   </div>
 
   <div id="desafioteatro2" style="position: absolute; top: 330px; left: 350px; height: 500px">
