--- a/teatro5.htm
+++ b/teatro5.htm
@@ -2,9 +2,10 @@
   <img id="jose" class="guia" src="img/jose.png"/>
 
   <div id="balao">
+  	<font size="3">
 <!--    Conclusão. A soma da quantidade de grupos formados por um menino e duas meninas com a quantidade de grupos formados por dois meninos e uma menina é o total de 9 grupos que você listou!<br>
 -->
-      A soma da quantidade de grupos formados por um menino e duas meninas com a quantidade de grupos formados por dois meninos e uma menina é o total de 9 grupos que você listou!<br>
+      Observe que a soma da quantidade de grupos formados por um menino e duas meninas com a quantidade de grupos formados por dois meninos e uma menina é o total de 9 grupos que você listou! Seria apenas coincidência?<br>
 <!--    <img id="seguir" class="txt_btn" title="Seguir" src="img/avancar_texto.png"/>
 -->
   </div>
