--- a/carro4.htm
+++ b/carro4.htm
@@ -1,6 +1,6 @@
-<div id="background" style="background-image:url('img/carro/bgprincipal.png')"/>
+<div id="background" style="background-image:url('img/carro/bgprincipal4.png')"/>
   
-  <img id="jose" class="guia" src="img/jose.png"/>
+  <img id="jose" class="guia2" src="img/jose.png"/>
   <div id="balao">
     Agora que você já listou todos os 9 possíveis grupos, responda aos desafios.<br>
     <img id="seguir" class="txt_btn" title="Seguir" src="img/avancar_texto.png"/>
@@ -9,4 +9,5 @@
   <img id="voltar" class="btn" title="Voltar" src="img/voltar.png"/>
   <img id="ajuda" class="btn" title="Ajuda" src="img/ajuda.png"/>
   <img id="inicio" class="btn" title="Início" src="img/inicio.png"/>
+  
 </div>
