--- a/teatro0.htm
+++ b/teatro0.htm
@@ -9,17 +9,19 @@
   <img id="jose" class="guia" src="img/jose.png"/>
 
   <div id="balao">
-    Ajude a professora Rita a fazer uma lista com todos os possíveis grupos de alunos para essa atividade.<br>
-    <img id="comecar" class="txt_btn" title="Começar" src="img/avancar_texto.png"/>
+    Três meninos e duas meninas querem participar da atividade do teatro. Para isso, as crianças precisam ser separadas em grupos. Quantos trios diferentes podem ser formados com pelo menos um menino?<br>
+    <img id="comecar" class="txt_btn" title="Começar" style="position: absolute; top: 60%" src="img/avancar_texto.png"/>
   </div>
   
   <div id="feedback0" class="feedback">
-    Cada peça do teatro deve ser apresentada por apenas três crianças, incluindo pelo menos um menino.
+    Para come&ccedil;ar a atividade, clique em cima de cada crian&ccedil;a e arraste-a at&eacute; o local indicado no centro do palco.
   </div>
-  
+
+ 
   <img id="fechar_feedback" class="txt_btn" title="Fechar" src="img/fechar_feedback.png"/>
 
   <img id="voltar" class="btn" title="Voltar" src="img/voltar.png"/>
   <img id="ajuda" class="btn" title="Ajuda" src="img/ajuda.png"/>
   <img id="inicio" class="btn" title="Início" src="img/inicio.png"/>
+ 
 </div>
